crates/ftui-core/tests/compile_fail/cooked_cannot_exit_raw.stderr
error[E0599]: no method named `exit_raw` found for struct `ftui_core::mode_typestate::TerminalMode<0>` in the current scope
 --> tests/compile_fail/cooked_cannot_exit_raw.rs:6:12
  |
6 |     cooked.exit_raw();
  |            ^^^^^^^^ method not found in `ftui_core::mode_typestate::TerminalMode<0>`
  |
  = note: the method was found for
          - `ftui_core::mode_typestate::TerminalMode<ftui_core::::mode_typestate::{impl#6}::{constant#0}>`
